Add a QOpenGL display widget

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS OpenGLWidgets)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -23,6 +24,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(Regrafusion
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        displaywidget.h displaywidget.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Regrafusion APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
@@ -42,7 +44,10 @@ else()
     endif()
 endif()
 
+target_include_directories(Regrafusion PRIVATE .)
+
 target_link_libraries(Regrafusion PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(Regrafusion PRIVATE Qt${QT_VERSION_MAJOR}::OpenGLWidgets)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
