GFX: Add a circle class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         inc/gfx/branch.h src/gfx/branch.cpp
         inc/gfx/leaf.h src/gfx/leaf.cpp
         inc/gfx/leaves/spawnpoint.h src/gfx/leaves/spawnpoint.cpp
+        inc/gfx/leaves/circle.h src/gfx/leaves/circle.cpp
         subdirs.pro
     )
 # Define target properties for Android with Qt 6 as:
