--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         inc/gfx/leaf.h src/gfx/leaf.cpp
         inc/gfx/leaves/spawnpoint.h src/gfx/leaves/spawnpoint.cpp
         inc/gfx/leaves/circle.h src/gfx/leaves/circle.cpp
+        inc/gfx/leaves/line.h src/gfx/leaves/line.cpp
         subdirs.pro
     )
 # Define target properties for Android with Qt 6 as:
