GFX: Add a path class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         inc/gfx/leaves/circle.h src/gfx/leaves/circle.cpp
         inc/gfx/leaves/line.h src/gfx/leaves/line.cpp
         inc/gfx/leaves/rectangle.h src/gfx/leaves/rectangle.cpp
+        inc/gfx/leaves/path.h src/gfx/leaves/path.cpp
         subdirs.pro
     )
 # Define target properties for Android with Qt 6 as:
