CTX: add RgfCtx class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         inc/gfx/leaves/rectangle.h src/gfx/leaves/rectangle.cpp
         inc/gfx/leaves/path.h src/gfx/leaves/path.cpp
         inc/leaf_identifier.h src/leaf_identifier.cpp
+        inc/rgf_ctx.h src/rgf_ctx.cpp
         subdirs.pro
     )
 # Define target properties for Android with Qt 6 as:
