--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         inc/editors/transform_editor.h src/editors/transform_editor.cpp
         inc/editors/circle_editor.h src/editors/circle_editor.cpp
         inc/editors/line_editor.h src/editors/line_editor.cpp
+        inc/editors/rectangle_editor.h src/editors/rectangle_editor.cpp
         inc/view.h
         inc/common.h
         inc/math_utils.h
