--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         inc/editors/circle_editor.h src/editors/circle_editor.cpp
         inc/editors/line_editor.h src/editors/line_editor.cpp
         inc/editors/rectangle_editor.h src/editors/rectangle_editor.cpp
+        inc/controls/control.h src/controls/control.cpp
         inc/view.h
         inc/common.h
         inc/math_utils.h
